font size fix on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -211,6 +211,9 @@ html {
   .contact {
     width: 100%;
   }
+  .description {
+    font-size: 1.2rem;
+  }
 }
 
 @media screen and (min-width: 800px) {
